[gd_scene load_steps=3 format=3 uid="uid://jx9m3n5k7h2cv"]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1_hud"]
[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="2_minimap"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 200.0

[node name="RoundLabel" type="Label" parent="TopLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Round 1"

[node name="TierLabel" type="Label" parent="TopLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = ""

[node name="TierProgress" type="ProgressBar" parent="TopLeft"]
layout_mode = 2
custom_minimum_size = Vector2(200, 8)
max_value = 100.0
value = 0.0
show_percentage = false

[node name="ZombiesLabel" type="Label" parent="TopLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Zombies: 0"

[node name="FPSLabel" type="Label" parent="TopLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "FPS: 0"

[node name="ObjectiveTracker" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 210.0
offset_right = 400.0
offset_bottom = 245.0

[node name="ObjectiveIcon" type="Label" parent="ObjectiveTracker"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = ">"

[node name="ObjectiveText" type="Label" parent="ObjectiveTracker"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = ""

[node name="TopRight" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
alignment = 2

[node name="PowerUpContainer" type="HBoxContainer" parent="TopRight"]
layout_mode = 2
alignment = 2

[node name="Minimap" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 340.0
grow_horizontal = 0
script = ExtResource("2_minimap")

[node name="Background" type="ColorRect" parent="Minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 0.9)

[node name="Border" type="ReferenceRect" parent="Minimap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.6, 0.6, 0.7, 1)
border_width = 2.0

[node name="BottomLeft" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0
alignment = 2

[node name="PerksContainer" type="HBoxContainer" parent="BottomLeft"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BottomRight" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="PointsLabel" type="Label" parent="BottomRight"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "500"
horizontal_alignment = 2

[node name="WeaponInfo" type="HBoxContainer" parent="BottomRight"]
layout_mode = 2
alignment = 2

[node name="WeaponName" type="Label" parent="BottomRight/WeaponInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "M1911"
horizontal_alignment = 2

[node name="AmmoLabel" type="Label" parent="BottomRight/WeaponInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "8 / 80"

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairDot" type="ColorRect" parent="Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="InteractionPrompt" type="Label" parent="Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = ""
horizontal_alignment = 1


[node name="AnnouncementLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = ""
horizontal_alignment = 1
modulate = Color(1, 1, 0, 1)

[node name="DamageOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.7, 0, 0, 0)

[node name="DownedOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0, 0, 0.3)

[node name="DownedLabel" type="Label" parent="DownedOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "YOU ARE DOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BleedoutTimer" type="Label" parent="DownedOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "45"
horizontal_alignment = 1

[node name="AchievementPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2

[node name="AchievementVBox" type="VBoxContainer" parent="AchievementPopup"]
layout_mode = 2

[node name="AchievementTitle" type="Label" parent="AchievementPopup/AchievementVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = "ACHIEVEMENT"
horizontal_alignment = 1

[node name="AchievementDesc" type="Label" parent="AchievementPopup/AchievementVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = ""
horizontal_alignment = 1
